app-hackazon/hackazon-service-lb.yaml
kind: Service
apiVersion: v1
metadata:
  name: hackazon-l4
  labels:
    app: hackazon-shop
    svc: hackazon-l4
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8000
  selector:
    app: hackazon-shop
  type: LoadBalancer
